Fix .synonyms-container spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -533,6 +533,7 @@ DEFINITIONS styles
 
 .definitions {
   padding-left: 14px;
+  margin-bottom: 24px;
 }
 
 .definition {
@@ -571,7 +572,7 @@ SYNONYMS styles
 
 .synonyms-container {
   display: flex;
-  margin-top: 24px;
+  margin-bottom: 32px;
 }
 
 .synonym-text {
